text align fixed

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@
 
 .best-offer-heading {
     color: #F00;
-    text-align: center;
+
     font-family: Inter;
     font-size: 24px;
     font-weight: 500;
@@ -197,7 +197,7 @@
 .best-offer-ad {
     display: block;
     margin-right: 70px;
-    padding-top: 80px;
+    padding-top: 85px;
 }
 
 .best-offer-year {
